# routers/commentsRouter_controllers.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"github.com/astaxie/beego"
+	"github.com/astaxie/beego/context/param"
 )
 
 func init() {
@@ -11,6 +12,7 @@ func init() {
 			Method: "EbusinessOrderHandle",
 			Router: `/ebusinessOrderHandle`,
 			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
 			Params: nil})
 
 	beego.GlobalControllerRouter["zjlife/controllers:ToiletController"] = append(beego.GlobalControllerRouter["zjlife/controllers:ToiletController"],
@@ -18,6 +20,31 @@ func init() {
 			Method: "SearchToilet",
 			Router: `/around`,
 			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["zjlife/controllers:UserController"] = append(beego.GlobalControllerRouter["zjlife/controllers:UserController"],
+		beego.ControllerComments{
+			Method: "GetUserInfo",
+			Router: `/info`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["zjlife/controllers:UserController"] = append(beego.GlobalControllerRouter["zjlife/controllers:UserController"],
+		beego.ControllerComments{
+			Method: "Login",
+			Router: `/login`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
+			Params: nil})
+
+	beego.GlobalControllerRouter["zjlife/controllers:UserController"] = append(beego.GlobalControllerRouter["zjlife/controllers:UserController"],
+		beego.ControllerComments{
+			Method: "Update",
+			Router: `/update`,
+			AllowHTTPMethods: []string{"post"},
+			MethodParams: param.Make(),
 			Params: nil})
 
 	beego.GlobalControllerRouter["zjlife/controllers:WeatherController"] = append(beego.GlobalControllerRouter["zjlife/controllers:WeatherController"],
@@ -25,6 +52,7 @@ func init() {
 			Method: "SearchWeather",
 			Router: `/weatherInfo`,
 			AllowHTTPMethods: []string{"get"},
+			MethodParams: param.Make(),
 			Params: nil})
 
 }
